--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <activity
             android:name=".EditorActivity"
             android:label="@string/editor_activity_title_new_land"
-            android:parentActivityName=".DetailActivity"
+            android:parentActivityName=".CatalogActivity"
             android:theme="@style/EditorTheme">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
